--- a/content1/index.html
+++ b/content1/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Director of Admissions | Lindy Levinson</title>
+    <title>content1</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,400,400i,700,700i|Playfair+Display:400,400i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="../css/style.css" rel="stylesheet" type="text/css"/>
