--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>About | Lindy Levinson</title>
+    <title>About | Person</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,400,400i,700,700i|Playfair+Display:400,400i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="css/style.css" rel="stylesheet" type="text/css"/>
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div class="lindy">
-        <h1><a href="/">Lindy Levinson</a></h1>
+        <h1><a href="/">Name</a></h1>
       </div>
       <nav>
         <a href='#about'>About</a>
@@ -19,7 +19,7 @@
     </header>
     <section class="intro" id="intro" >
       <div class="hello">
-        <h2>Oh, <br>Hello</h2>
+        <h2>Main Title</h2>
         <div class="triangle"></div>
       </div>
     </section>
@@ -27,32 +27,31 @@
       <section id="about" class="about">
         <div class="about-inner">
           <figure>
-            <img src="img/lindy.jpg">
+            <!-- main image -->
+            <img src="">
           </figure>
           <div class="about-text">
-            <h3>I'm Lindy</h3>
-            <p>I am an effective team-builder, recognizing strengths in others and cultivating a strong team dynamic. With over 10 years of experience, I have grown teams and developed programs from scratch.</p>
-            <p>I am often presented a goal and then asked to write the roadmap. I earn the trust of others by staying cool in high-pressure environments.</p>
-            <p>Whether through education, medical research, or fitness, my goal is to help the advancement of others.</p>
-            <p>I equally enjoy Fast Company and Vogue, I believe nothing clears your head like a long run, I live my life according to my Google Calendar, and I think eating dessert is the secret to happiness.</p>
+            <h3>introduction</h3>
+            <p>Acerbic barista caramelization, black so mocha galão et, java, sweet seasonal, froth, redeye, eu ristretto espresso rich, skinny siphon eu cortado flavour. Rich, arabica redeye in wings, sugar espresso, acerbic robust dark galão and pumpkin spice dripper body.</p>
+            <p>Grinder, latte fair trade est froth, saucer aromatic coffee as spoon java brewed coffee. Pumpkin spice arabica turkish qui bar brewed aroma, et fair trade shop, filter dripper carajillo body variety, seasonal, robusta, and to go froth cup doppio. Ut, so viennese americano a extra, espresso cup crema sugar, strong qui sweet cappuccino trifecta decaffeinated redeye.</p>
           </div>
         </div>
         <div class="buttons gray" id="work">
-          <h3>Read about my experience as...</h3>
+          <h3>Experience</h3>
           <div class="work-index">
             <div class="opc">
               <div class="opc-inner">
-                <a class="frosted" href="/operations-project-coordinator">Operations Project Coordinator</a>
+                <a class="frosted" href="/content1">Title</a>
               </div>
             </div>
             <div class="pc">
               <div class="pc-inner">
-                <a class="frosted" href="/program-coordinator">Program Coordinator</a>
+                <a class="frosted" href="/content2">Title</a>
               </div>
             </div>
             <div class="doa">
               <div class="doa-inner">
-                <a class="frosted" href="/director-of-admissions">Director of Admissions</a>
+                <a class="frosted" href="/content3">Title</a>
               </div>
             </div>
           </div>
@@ -60,17 +59,21 @@
       </section>
     </main>
     <footer id="contact" class="contact">
-      <p>Want to work together, or just grab coffee? Get in touch!</p>
+      <p>Call to action</p>
       <div class="icons">
         <div class="icons-inner">
-          <a href="https://twitter.com/lindylevinson" target="_blank"><span class="fab fa-twitter-square"></span></a>
-          <a href="https://www.linkedin.com/in/lindymerida/" target="_blank"><span class="fab fa-linkedin"></span></a>
-          <a href="mailto:lindy.merida@gmail.com"><span class="fas fa-envelope-square"></span></a>
+          <!-- twitter -->
+          <a href="" target="_blank"><span class="fab fa-twitter-square"></span></a>
+          <!-- linkedin -->
+          <a href="" target="_blank"><span class="fab fa-linkedin"></span></a>
+          <!-- email -->
+          <a href="mailto:"><span class="fas fa-envelope-square"></span></a>
         </div>
       </div>
       <div class="footnote">
-        <p>Website hand-crafted by Sarah June Fischer.<br/>
-        <a href="https://www.sarahjunefischer.com" target="_blank">www.sarahjunefischer.com</a></p>
+        <p>Creator<br/>
+          <!-- email -->
+        <a href="" target="_blank">email</a></p>
       <div>
     </footer>
   </body>
