all pages functioning and stripped down to template status

--- a/content1/index.html
+++ b/content1/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header>
-      <div class="lindy">
-        <h1><a href="/">Lindy Levinson</a></h1>
+      <div class="name">
+        <h1><a href="/">Name</a></h1>
       </div>
       <nav>
         <a href='/#about'>About</a>
@@ -19,41 +19,39 @@
     </header>
     <section id="work" class="work doa-lg">
       <div class="title white">
-        <h3>Director of Admissions</h3>
-        <h4>Code Fellows // 2013 - Present</h4>
+        <h3>Title</h3>
+        <h4>Position</h4>
       </div>
       <div class="text">
         <div class="frosted">
-          <p>I joined Code Fellows as employee #6, and within the first month successfully and single-handedly managed the admissions process for every student in an at-capacity class.</p>
-          <p><strong>Five years later,</strong> I now head the Admissions Department, and have hired and trained four outstanding admissions team members. I have built and perfected our student admissions funnel, interviewing thousands of applicants on their path to realizing their full potential.</p>
-          <p>In the past five years, I:</p>
+          <p>description</p>
+          <p><strong></strong></p>
+          <p></p>
           <ul>
-            <li>Directed the admissions process for over <strong>2,000 applicants.</strong></li>
-            <li>Successfully managed the migration and <strong>Salesforce</strong> integration of our student contracting process.</li>
-            <li>Managed the allocation of over <strong>$1.7M</strong> in scholarships.</li>
-            <li>Hired, trained, and currently manage a <strong>four-person</strong> admissions team.</li>
-            <li>Successfully launched our inagural scholarship program, including developing the scholarship application and evaluation criteria, fostering a <strong>30% increase</strong> in diverse applicants.</li>
-            <li>Have managed military programs, overseeing the acceptance of GI Bill and Code Fellows' annual regulatory and compliance reporting to the Department of Veterans Assocation.</li>
-            <li>Collaborated with our marketing department to organize engaging events for prospective students</li>
+            <li></li>
           </ul>
-          <p>Through this role, I have experienced growing and supporting a team that focuses on excellence in their work, compassion with our prospective students, and care for fellow team members.</p>
+          <p></p>
         </div>
       </div>
     </section>
     <footer id="contact" class="contact">
-      <p>Want to work together, or just grab coffee? Get in touch!</p>
-      <div class="icons">
-        <div class="icons-inner">
-          <a href="https://twitter.com/lindylevinson" target="_blank"><span class="fab fa-twitter-square"></span></a>
-          <a href="https://www.linkedin.com/in/lindymerida/" target="_blank"><span class="fab fa-linkedin"></span></a>
-          <a href="mailto:lindy.merida@gmail.com"><span class="fas fa-envelope-square"></span></a>
+        <p>Call to action</p>
+        <div class="icons">
+          <div class="icons-inner">
+            <!-- twitter -->
+            <a href="" target="_blank"><span class="fab fa-twitter-square"></span></a>
+            <!-- linkedin -->
+            <a href="" target="_blank"><span class="fab fa-linkedin"></span></a>
+            <!-- email -->
+            <a href="mailto:"><span class="fas fa-envelope-square"></span></a>
+          </div>
         </div>
-      </div>
-      <div class="footnote">
-        <p>Website hand-crafted by Sarah June Fischer.<br/>
-        <a href="https://www.sarahjunefischer.com" target="_blank">www.sarahjunefischer.com</a></p>
-      </div>
-    </footer>
+        <div class="footnote">
+          <p>Creator<br/>
+            <!-- email -->
+          <a href="" target="_blank">email</a></p>
+        <div>
+      </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"/></script>
   <script src="../script.js"></script>
