--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <div class="lindy">
+      <div class="name">
         <h1><a href="/">Name</a></h1>
       </div>
       <nav>
@@ -20,7 +20,7 @@
     <section class="intro" id="intro" >
       <div class="hello">
         <h2>Main Title</h2>
-        <div class="triangle"></div>
+        <!-- <div class="triangle"></div> -->
       </div>
     </section>
     <main>
@@ -41,17 +41,17 @@
           <div class="work-index">
             <div class="opc">
               <div class="opc-inner">
-                <a class="frosted" href="/content1">Title</a>
+                <a class="frosted" href="content1/index.html">Title</a>
               </div>
             </div>
             <div class="pc">
               <div class="pc-inner">
-                <a class="frosted" href="/content2">Title</a>
+                <a class="frosted" href="content2/index.html">Title</a>
               </div>
             </div>
             <div class="doa">
               <div class="doa-inner">
-                <a class="frosted" href="/content3">Title</a>
+                <a class="frosted" href="content3/index.html">Title</a>
               </div>
             </div>
           </div>
