--- a/content2/index.html
+++ b/content2/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Operations Project Coordinator | Lindy Levinson</title>
+    <title>content2</title>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,400,400i,700,700i|Playfair+Display:400,400i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link href="../css/style.css" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <header>
-      <div class="lindy">
-        <h1><a href="/">Lindy Levinson</a></h1>
+      <div class="name">
+        <h1><a href="/">Name</a></h1>
       </div>
       <nav>
         <a href='/#about'>About</a>
@@ -19,39 +19,37 @@
     </header>
     <section id="work" class="work opc-lg">
       <div class="title white">
-        <h3>Operations Project Coordinator</h3>
-        <h4>Bodybuilding.com // 2008 – 2012</h4>
+        <h3>Title</h3>
+        <h4>position</h4>
       </div>
       <div class="text">
         <div class="frosted">
-          <p>Bodybuilding.com was my introduction to the exciting world of startups. During those four fast-paced years,&nbsp;I:</p>
+          <p>description</p>
           <ul>
-            <li>Assisted in growing the Operations department from a five-person team to over 250 employees in just a few years.</a>
-            <li>Led teams in the Netherlands and Canada as project manager for an international warehouse expansion.</li>
-            <li>Managed the reorganization of the Customer Service Deptartment (<strong>150 employees</strong>), resulting in a lowered cost per contact and increased representative response time.</li>
-            <li>Led a <strong>$10 million</strong> corporate office renovation project.</li>
-            <li>Worked closely with key business stakeholders to forecast and enforce a multi-million dollar yearly expense budget, including details on headcount and open positions.</li>
-            <li>Created system to recover as much "re-shipped" product as possible, leading to the recovery of <strong>thousands of dollars</strong> in lost product.</li>
-            <li>Acted as executive assistant to the VP, coordinating schedules, starting projects, calculating operational costs, creating budgets, booking travel, and more.</li>
+            <li></li>
           </ul>
-          <p>By the end of my time at Bodybuilding.com, I had a solid operational foundation. With this, I learned how to identify process weaknesses <em>and</em> how to fix them, first by defining and documenting the requirements and scope of what needed to be improved, and then systematically and strategically implementing these fixes to maximize company efficiency.</p>
+          <p>more content</p>
         </div>
       </div>
     </section>
     <footer id="contact" class="contact">
-      <p>Want to work together, or just grab coffee? Get in touch!</p>
-      <div class="icons">
-        <div class="icons-inner">
-          <a href="https://twitter.com/lindylevinson" target="_blank"><span class="fab fa-twitter-square"></span></a>
-          <a href="https://www.linkedin.com/in/lindymerida/" target="_blank"><span class="fab fa-linkedin"></span></a>
-          <a href="mailto:lindy.merida@gmail.com"><span class="fas fa-envelope-square"></span></a>
+        <p>Call to action</p>
+        <div class="icons">
+          <div class="icons-inner">
+            <!-- twitter -->
+            <a href="" target="_blank"><span class="fab fa-twitter-square"></span></a>
+            <!-- linkedin -->
+            <a href="" target="_blank"><span class="fab fa-linkedin"></span></a>
+            <!-- email -->
+            <a href="mailto:"><span class="fas fa-envelope-square"></span></a>
+          </div>
         </div>
-      </div>
-      <div class="footnote">
-        <p>Website hand-crafted by Sarah June Fischer.<br/>
-        <a href="https://www.sarahjunefischer.com" target="_blank">www.sarahjunefischer.com</a></p>
-      </div>
-    </footer>
+        <div class="footnote">
+          <p>Creator<br/>
+            <!-- email -->
+          <a href="" target="_blank">email</a></p>
+        <div>
+      </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"/></script>
   <script src="../script.js"></script>
